fix demos on mobile, fix image size of small cards

--- a/app/assets/stylesheets/_decks-cards.css.scss
+++ b/app/assets/stylesheets/_decks-cards.css.scss
@@ -156,6 +156,12 @@
       margin-bottom: 8px;
       margin-right: 8px;
       width: 132px !important;
+
+      .front, .back {
+        &.image img {
+          width: 132px;
+        }
+      }
     }
   }
 
